--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <title>Show Me The Weather</title>
 </head>
 <body>
-    
+    <main>
+    <div id="sample-display">
+    </div>
+    </main>
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
