html framework and css

--- a/index.html
+++ b/index.html
@@ -5,12 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Show Me The Weather</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    <main>
-    <div id="sample-display">
+    <div class="jumbotron jumbotron-fluid bg-success">
+        <div class="container text-center">
+            <h1 class="display-3 p-3 text-light">Show Me the Weather!</h1>
+        </div>
+    </div>    
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-2 border-primary">
+                <div id="form">
+                    <button class="w-100">Test</button>
+                    <button class="w-100">Test</button>
+                    <button class="w-100">Test</button>
+                    <button class="w-100">Test</button>
+                    <button class="w-100">Test</button>
+                </div>
+            </div>
+            <div class="col-10 border-primary">
+                <div id="current-weather">
+                    <h4>THIS WILL BE THE CURRENT WEATHER</h4>
+                    <p>weather</p>
+                    <p>wind</p>
+                    <p>uv index</p>
+                    <p>img</p>
+                </div>
+                <div id="5-day-forecast" class="d-flex flex-wrap justify-content-around">
+                    <div>Day 1</div>
+                    <div>Day 2</div>
+                    <div>Day 3</div>
+                    <div>Day 4</div>
+                    <div>Day 5</div>
+                </div>
+            </div>
+        </div>
+        
     </div>
-    </main>
+    <!--addback <div id="sample-display"></div> -->
+   
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
