--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
             <div class="col-sm-9 col-12 border-primary">
                 <div id="current-weather">
                     <div id="current-display"></div>
-                    <p>weather</p>
-                    <p>wind</p>
-                    <p>uv index</p>
-                    <p>img</p>
+                    <p id="temp">Temperature: &#8457</p>
+                    <p id="wind">Wind: </p>
+                    <p id="humidity">Humidity: </p>
+                    <p id="uv-index">UV Index: </p>
                 </div>
                 <div id="5-day-forecast" class="d-flex flex-wrap justify-content-around">
                     <h4 class="w-100">5-Day Forecast:</h4>
