--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <p id="temp">Temperature: &#8457</p>
                     <p id="wind">Wind: </p>
                     <p id="humidity">Humidity: </p>
-                    <p id="uv-index">UV Index: </p>
+                    <div>UV Index: <span id="uv-index"></span></div>
                 </div>
                 <div id="5-day-forecast" class="d-flex flex-wrap justify-content-around p-1">
                     <h4 class="w-100">5-Day Forecast:</h4>
