css edits and local storage functionality

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 
 <body>
-    <div class="jumbotron jumbotron-fluid bg-success">
-        <div class="container text-center">
-            <h1 class="display-3 p-3 text-light">Show Me the Weather!</h1>
-        </div>
+    <div class="jumbotron jumbotron-fluid gradient text-center">
+        <h1 class="display-3 p-3 text-light shadow">Show Me the Weather!</h1>
     </div>    
     <div class="container-fluid">
         <div class="row">
@@ -21,12 +19,10 @@
                 <div id="form">
                     <h3 class="text-center">Search for a City:</h3>
                     <input class="w-75 m-3"type="text" id="city-name" placeholder="...type in a city"></label>
-                    <button class="w-75 m-3" id="submit">Submit</button>
-                    <hr>
-                    <button class="w-75 m-3">Test</button>
-                    <button class="w-75 m-3">Test</button>
-                    <button class="w-75 m-3">Test</button>
-                    <button class="w-75 m-3">Test</button>
+                    <div id="button">
+                        <button class="w-75 m-3" id="submit">Submit</button>
+                        <hr>
+                    </div>
                 </div>
             </div>
             <div class="col-sm-9 col-12">
@@ -49,8 +45,6 @@
         </div>
         
     </div>
-  
-   
     <script src="./assets/js/script.js"></script>
 </body>
 </html>
