--- a/index.html
+++ b/index.html
@@ -27,7 +27,11 @@
             </div>
             <div class="col-sm-9 col-12">
                 <div id="current-weather" class="border border-primary p-3">
-                    <div id="current-display"></div>
+                    <div id="current-display" style="text-align: center;">
+                        <h3 style="display: inline" id="city"></h3>
+                        <p style="display: inline; font-size:larger" id="date"></p>
+                        <img style="display: inline" id="icon" src=""/>
+                    </div>
                     <p id="temp">Temperature: &#8457</p>
                     <p id="wind">Wind: </p>
                     <p id="humidity">Humidity: </p>
