different way of clearing data, css edits

--- a/index.html
+++ b/index.html
@@ -20,18 +20,14 @@
                     <h3 class="text-center">Search for a City:</h3>
                     <input class="w-75 m-3"type="text" id="city-name" placeholder="...type in a city"></label>
                     <div id="button">
-                        <button class="w-75 m-3" id="submit">Submit</button>
+                        <button class="w-75 m-3 btn btn-success" id="submit">Submit</button>
                         <hr>
                     </div>
                 </div>
             </div>
             <div class="col-sm-9 col-12">
                 <div id="current-weather" class="border border-primary p-3">
-                    <div id="current-display" style="text-align: center;">
-                        <h3 style="display: inline" id="city"></h3>
-                        <p style="display: inline; font-size:larger" id="date"></p>
-                        <img style="display: inline" id="icon" src=""/>
-                    </div>
+                    <div id="current-display"></div>
                     <p id="temp">Temperature: &#8457</p>
                     <p id="wind">Wind: </p>
                     <p id="humidity">Humidity: </p>
